fixed dark mode tag page

--- a/src/components/styles/_darkTheme.scss
+++ b/src/components/styles/_darkTheme.scss
@@ -66,6 +66,7 @@ body {
   }
   & .TagPage__button {
     border: 1px solid $color-text-light;
+    color: #fff;
   }
   & .paginationLink {
     background: rgb(26, 29, 34);
